--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <!-- ========== BIO ========== -->
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
-  <p>
+  <!-- <p>
   My research develops tools for analyzing <b>large-scale social data</b>, aiming to provide a better understanding of <b>social structure and behaviors</b> online while also impacting the <b>design of digital social systems</b>. 
   My recent work has focused on reducing political polarization online 
   [<a href="assets/publications/2022_newsbridge/paper.pdf" target="_blank">ICWSM'22a</a>,
@@ -19,19 +19,29 @@ title: Home
   [<a href="assets/publications/2017_detecting_network_effects/paper.pdf" target="_blank">KDD'17</a>
   <a href="assets/publications/2019_biometrika/paper.pdf" target="_blank">Biometrika'19</a>]. 
   My research often falls at the intersections of Social Networks, Machine Learning, and Causal Inference.
+  </p> -->
+
+  <p>
+  I am a second-year Ph.D. student at the <a href='https://alinlab.kaist.ac.kr/'>Algorithmic Intelligence Lab</a> at <a href="https://gsai.kaist.ac.kr/">KAIST AI</a>.
+  My research focuses on developing efficient and safe methods for enhancing, aligning, and personalizing generative models, with an emphasis on large language models.
+  I have broad research interests, including large language models, reinforcement learning from human feedback, AI safety, and nature-inspired intelligence, among others.
+  I always strive to deepen my understanding of the fundamental (mathematical) principles behind everything I work on, though it's often more challenging than I anticipate :-)
   </p>
 
   <p>
-  I'm an Assistant Professor in the Information School at the University of Washington.
+  Previously, I worked as a senior software engineer at Google, developing machine learning methods to localize Google Assistant for low-resource languages.
+  I also worked in Display Ads, building the ads backend system and enhancing auction algorithms for improved user experience.
+  I received an MS in computer science from Stanford University and a BS in computer science with a minor in applied mathematics from Cornell University.
+  <!-- I'm an Assistant Professor in the Information School at the University of Washington.
   Before joining UW, I was a Postdoc at Stanford University, mentored by <a href="https://web.stanford.edu/~jugander/" target="_blank">Johan Ugander</a>.
   I received my Ph.D. from MIT in 2020 under the supervision of Deb Roy. 
   Prior to coming to MIT, I spent one year in Paris and one year in Barcelona doing a M.Sc. in Data mining and Knowledge Management. 
   I got my B.Sc. from Staffordshire University with First Class honors in Computer Science. 
-  Throughout my graduate studies, I spent several summers doing internships in industry, including Yahoo! Labs, Amazon, LinkedIn, and Facebook.
+  Throughout my graduate studies, I spent several summers doing internships in industry, including Yahoo! Labs, Amazon, LinkedIn, and Facebook. -->
   </p> 
 </div>
 
-<div class="docs-section" id="prospective-students">  
+<!-- <div class="docs-section" id="prospective-students">  
   <h4>Prospective Students</h4>
   <p>
   <b>I'm recruiting PhD students to start Fall 2024 at the University of Washington! </b> 
@@ -43,7 +53,7 @@ title: Home
   <br/>
   If you have any questions, feel free to reach out.
   </p> 
-</div>
+</div> -->
 
 
 <!-- ========== PUBLICATIONS ========== -->
@@ -238,15 +248,5 @@ title: Home
 
 <div class="docs-section" id="template">
   <h4>Website Design</h4>
-  Since I made this website, many people have found this Jekyll template useful [
-  {% for template_user in site.data.template_users.template_users %}
-  <a href="{{ template_user }}" target="_blank">{{ forloop.index }}</a>{% if forloop.last %}{% else %},{% endif %}
-  {% endfor %}
-  ].
-  <!--<br/>-->
-  You can find all the code needed to build your website in this <a href="https://github.com/msaveski/www_personal" target="_blank">GitHub repo</a>.
-  Feel free to use it. <br/>
-
-  If you end up using it, please link to here and drop me an email.
-  I'm always happy to see people using it.
+  This website is based on this wonderful <a href="https://github.com/msaveski/www_personal" target="_blank">GitHub repo</a>.
 </div>  
