--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ title: Home
   <p>
   I am a second-year Ph.D. student at the <a href='https://alinlab.kaist.ac.kr/'>Algorithmic Intelligence Lab</a> at <a href="https://gsai.kaist.ac.kr/">KAIST AI</a>.
   My research focuses on developing efficient and safe methods for enhancing, aligning, and personalizing generative models, with an emphasis on large language models.
-  I have broad research interests, including large language models, reinforcement learning from human feedback, AI safety, and nature-inspired intelligence, among others.
-  I always strive to deepen my understanding of the fundamental (mathematical) principles behind everything I work on, though it's often more challenging than I anticipate :-)
+  I have broad research interests, including generative models, reinforcement learning from human feedback, AI safety, and nature-inspired intelligence, among others.
+  I always strive to more deeply understand the fundamental (mathematical) principles behind everything I work on, though it's a lot challenging in general :-)
   </p>
 
   <p>
