--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Home
   </p> -->
 
   <p>
-  I am a second-year Ph.D. student at the <a href='https://alinlab.kaist.ac.kr/'>Algorithmic Intelligence Lab</a> at <a href="https://gsai.kaist.ac.kr/">KAIST AI</a>.
+  I am a 3rd year Ph.D. student at the <a href='https://alinlab.kaist.ac.kr/'>Algorithmic Intelligence Lab</a> at <a href="https://gsai.kaist.ac.kr/">KAIST AI</a>.
   My research focuses on developing efficient and safe methods for enhancing, aligning, and personalizing generative models, with an emphasis on large language models.
   I have broad research interests, including generative models, reinforcement learning from human feedback, AI safety, and nature-inspired intelligence, among others.
   I always strive to more deeply understand the fundamental (mathematical) principles behind everything I work on, though it's a lot challenging in general :-)
